Updated images, modified HTML, JS, CSS files for VpickU

--- a/index.html
+++ b/index.html
@@ -3,27 +3,26 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Rapido - Book Your Ride</title>
+  <title>VpickU - Book Your Ride</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
   <header>
-
-    <div class="logo">🚴‍♂️ VpickU </div>
-
-    <nav >
+    <div class="logo">🚴‍♂️ VpickU</div>
+    <nav>
       <a href="#">Home</a>
       <a href="#">About</a>
       <a href="signup.html"><button>Sign Up</button></a>
       <a href="login.html"><button>Log In</button></a>
     </nav>
+    <!-- Menu toggle button will be added by JavaScript -->
   </header>
 
   <section class="hero">
     <div class="hero-content">
-      <h1>Book Your Ride in Seconds</h1>
-      <p>Safe, affordable, and convenient bike rides at your fingertips</p>
+      <h1 style="color: black;">Book Your Ride in Seconds</h1>
+      <p style="color: gray;">Safe, affordable, and convenient bike rides at your fingertips</p>
       <div class="form-box">
         <h2>Book a Ride</h2>
         <input type="text" id="pickup" placeholder="📍 Pickup Location">
@@ -79,12 +78,12 @@
     </div>
     <div class="footer-col">
       <h4>Contact</h4>
-      <p>support@rapido.com</p>
+      <p>support@vpicku.com</p>
       <p>+1 (555) 123-4567</p>
       <p>123 Ride Street, City</p>
     </div>
   </footer>
 
-<script src="script.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
