--- a/signup.html
+++ b/signup.html
@@ -23,13 +23,8 @@
       <label>Password </label>
       <input type="password" placeholder="Enter your password" required><br>
   
-      <label>OTP</label>
-      <div class="otp-container">
-        <input type="text" maxlength="1" class="otp-input" required/>
-        <input type="text" maxlength="1" class="otp-input" required/>
-        <input type="text" maxlength="1" class="otp-input" required/>
-        <input type="text" maxlength="1" class="otp-input" required/>
-      </div>
+      <label>OTP (SMS)</label>
+      <input type="number" placeholder="Enter your OTP">
       <button type="submit">Sign Up</button><br>
       <a href="">already have an account ?</a>
     </form>
